tests/negative/neg_rule2_oob.safe
-- Test: neg_rule2_oob
-- Description: Out-of-bounds array access with an unconstrained index.
--   The index variable is of a wider type than the array index range,
--   and no bounds check is performed.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p132:8613ecf4
-- Expected: REJECT index_out_of_bounds

package oob_test

   subtype slot is integer (0 to 7)
   type data is array (slot) of integer
   function access_with_integer (arr : data; idx : integer) returns integer

      return arr (slot (idx))  -- ERROR: Idx may not be in 0..7

